--- a/views/home/profile.ejs
+++ b/views/home/profile.ejs
@@ -23,66 +23,62 @@
           </div> <!-- / .row -->
           <div class="row">
             <div class="col-xs-12">
-              <form class="form-horizontal" data-parsley-validate>
-                <!-- User info -->
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">사용자 정보</h4>
-                  </div>
-                  <div class="panel-body">
-                    <table class="table profile__table">
-                      <tbody>
-                        <tr>
-                          <th><strong>ID</strong></th>
-                          <td>
-                            <%=session.userid%>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th><strong>이름</strong></th>
-                          <td>
-                            <%=session.name%>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th><strong>권한</strong></th>
-                          <% if(session.permission==9){ var permission='관리자' ; } else{ var permission='사용자' ; } %>
-                            <td>
-                              <%=permission%>
-                            </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
+              <!-- User info -->
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">사용자 정보</h4>
                 </div>
+                <div class="panel-body">
+                  <table class="table profile__table">
+                    <tbody>
+                      <tr>
+                        <th><strong>ID</strong></th>
+                        <td>
+                          <%=session.userid%>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th><strong>이름</strong></th>
+                        <td>
+                          <%=session.name%>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th><strong>권한</strong></th>
+                        <% if(session.permission==9){ var permission='관리자' ; } else{ var permission='사용자' ; } %>
+                          <td>
+                            <%=permission%>
+                          </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">비밀번호 변경</h4>
-                  </div>
-                  <div class="panel-body">
-                    <form action="/userid/<%=session.userid%>?_method=PUT" method="post">
-                      <div class="form-group">
-                        <label class="col-sm-2 control-label">변경할 비밀번호</label>
-                        <div class="col-sm-10">
-                          <input type="password" class="form-control" id="password" name="password">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="col-sm-2 control-label">비밀번호 확인</label>
-                        <div class="col-sm-10">
-                          <input type="password" class="form-control" id="pass_check" name="pass_check">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-10 col-sm-offset-2">
-                          <button type="submit" class="btn btn-primary" onclick="return confirm('변경 하시겠습니까?')">변경</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">비밀번호 변경</h4>
                 </div>
-              </form>
+                <div class="panel-body">
+                  <form name="edit_pass" id="edit_pass" action="/userid/<%=session.userid%>?_method=PUT" method="post">
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label">변경할 비밀번호</label>
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="password" name="password">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-sm-2 control-label">비밀번호 확인</label>
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="pass_check" name="pass_check">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary" value="변경"></input>
+                    </div>
+                  </form>
+                </div>
+              </div>
             </div>
           </div> <!-- / .row -->
         </div> <!-- / .container-fluid -->
